# ci-exercice-cb9277

./: .pre-commit-config.yaml  CHANGELOG.md  nofile.py  noxfile.py  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: conf.py
src/unc/: __init__.py
