[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["/package_name"]

[tool.hatch.build.targets.wheel]
packages = ["package_name"]

[tool.ruff.lint]
extend-select = ["B", "I", "RUF", "UP"]

[project]
name = "ci-exercise-cb9277"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ['typing_extensions; python_version < "3.11"']

[project.optional-dependencies]
test = ["pytest", "uncertainties"]
docs = ["sphinx", "furo", "myst_parser"]
